--- a/dev/scss/core/_variables.scss
+++ b/dev/scss/core/_variables.scss
@@ -1,6 +1,7 @@
 // $bgcolor: #e1e3e4;
 // $bgcolor: #e2e8f2;
-$bgcolor: #eeeeee;
+$bgcolor: #ffffff;
+$contentBg: #eeeeee;
 $darkBG: #202020;
 $fontcolor: #212121;
 $footerFontColor: #ffffff;
